<resources>
    <string name="app_name">IYF ROHINI</string>
    <string name="iyf_rohini">IYF Rohini</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="books">Books</string>
    <string name="audios">Audios</string>
    <string name="videos">Videos</string>
    <string name="contact_us">Contact Us</string>
    <string name="address">Plot No-3, Institutional Area, Main Road, Pocket D, Sector 25, Rohini, New Delhi, Delhi 110085 \n\n Contact: Amrendra Hari Pr\n Phn. 9136120402\n Email- ahd.gkg.sp@gmail.com</string>
    <string name="call_us">Call Us</string>
    <string name="prayers">Prayers</string>
    <string name="shlokas">Shlokas</string>
    <string name="pranam_mantras">Pranam\nMantras</string>
    <string name="aartis">Aartis</string>
    <string name="hare_krsna_mahamantra_hindi">हरे कृष्ण, हरे कृष्ण, कृष्ण कृष्ण, हरे हरे | \n हरे हरे राम, हरे राम, राम राम, हरे हरे ||</string>
    <string name="splash_screen_message">He lives forever by his divine instructions and the followers lives with him</string>
    <string name="mangla_aarti">Mangla Aarti</string>
    <string name="narsingh_aarti">Narsingh Aarti</string>
    <string name="tulasi_aarti">Tulasi Aarti</string>
    <string name="shikshastamkam">Shikshastamkam</string>
    <string name="ten_offences_to_the_holy_name">Ten offences to the holy name</string>
    <string name="gaura_aarti">Gaura Aarti</string>
    <string name="gaur_aarti_text">(1)\n (kiba) jaya jaya gorācāńder āratiko śobhā\n jāhnavī-taṭa-vane jaga-mana-lobhā\n\n (2)\n dakhiṇe nitāicāńd, bāme gadādhara\n nikaṭe advaita, śrīnivāsa chatra-dhara\n\n (3)\n bosiyāche gorācāńd ratna-siḿhāsane\n ārati koren brahmā-ādi deva-gaṇe\n\n (4)\n narahari-ādi kori\' cāmara dhulāya\n sañjaya-mukunda-bāsu-ghoṣ-ādi gāya\n\n (5)\n śańkha bāje ghaṇṭā bāje bāje karatāla\n madhura mṛdańga bāje parama rasāla\n\n (6)\n bahu-koṭi candra jini\' vadana ujjvala\n gala-deśe bana-mālā kore jhalamala\n\n (7)\n śiva-śuka-nārada preme gada-gada\n bhakativinoda dekhe gorāra sampada\n\n</string>
    <string name="gaur_aarti_translation">TRANSLATION\n\n 1) All glories, all glories to the beautiful arati ceremony of Lord Caitanya. This Gaura-arati is taking place in a grove on the banks of the Jahnavi (Ganges) and is attracting the minds of all living entities in the universe.\n\n 2) On Lord Caitanya\'s right side is Lord Nityananda and on His left is Sri Gadadhara. Nearby stands Sri Advaita, and Srivasa Thakura is holding an umbrella over Lord Caitanya\'s head.\n\n 3) Lord Caitanya has sat down on a jeweled throne, and the demigods, headed by Lord Brahma, perform the arati ceremony\n\n 4) Narahari Sarakara and other associates of Lord Caitanya fan Him with camaras, and devotees headed by Sanjaya Pandita, Mukunda Datta, and Vasu Ghosa sing sweet kirtana.\n\n 5) Conchshells, bells, and karatalas resound, and the mrdangas play very sweetly. This kirtana music is supremely sweet and relish able to hear.\n\n 6) The brilliance of Lord Caitanya\'s face conquers millions upon millions of moons, and the garland of forest flowers around His neck shines.\n\n 7) Lord Siva, Sukadeva Gosvami, and Narada Muni are all there, and their voices are choked with the ecstasy of transcendental love. Thus Thakura Bhaktivinoda envisions the glory of Lord Sri Caitanya.\n\n</string>
    <string name="mangla_aart_text">(1) \n\n saḿsāra-dāvānala-līḍha-loka-\n trāṇāya kāruṇya-ghanāghanatvam\n prāptasya kalyāṇa-guṇārṇavasya\n vande guroḥ śrī-caraṇāravindam\n \n\n (2) \n\n mahāprabhoḥ kīrtana-nṛtya-gīta-\n vāditra-mādyan-manaso rasena\n romāñca -kampāśru-tarańga-bhājo\n vande guroḥ śrī-caraṇāravindam\n \n (3)\n\n śrī-vigrahārādhana-nitya-nānā-\n śṛńgāra-tan-mandira-mārjanādau\n yuktasya bhaktāḿś ca niyuñjato pi \n vande guroḥ śrī-caraṇāravindam\n \n (4)\n\n catur-vidha-śrī-bhagavat-prasāda-\n svādv-anna-tṛptān hari-bhakta-sańghān\n kṛtvaiva tṛptiḿ bhajataḥ sadaiva\n vande guroḥ śrī-caraṇāravindam\n \n (5) \n\n śrī-rādhikā-mādhavayor apāra-\n mādhurya-līlā guṇa-rūpa-nāmnām\n prati-kṣaṇāsvādana-lolupasya\n vande guroḥ śrī-caraṇāravindam\n \n (6)\n\n nikuñja-yūno rati-keli-siddhyai\n yā yālibhir yuktir apekṣaṇīyā\n tatrāti-dākṣyād ati-vallabhasya\n vande guroḥ śrī-caraṇāravindam\n \n (7)\n\n sākṣād-dharitvena samasta-śāstrair\n uktas tathā bhāvyata eva sadbhiḥ\n kintu prabhor yaḥ priya eva tasya\n vande guroḥ śrī-caraṇāravindam\n \n (8)\n\n yasya prasādād bhagavat-prasādo\n yasyāprasādān na gatiḥ kuto pi\n dhyāyan stuvaḿs tasya yaśas tri-sandhyaḿ\n vande guroḥ śrī-caraṇ\n \n\n\n</string>
    <string name="mangla_aarti_translation">TRANSLATION \n\n 1) <b><i>testing 123</i></b> The spiritual master is receiving benediction from the ocean of mercy. Just as a cloud pours water on a forest fire to extinguish it, so the spiritual master delivers the materially afflicted world by extinguishing the blazing fire of material existence. I offer my respectful obeisances unto the lotus feet of such a spiritual master, who is an ocean of auspicious qualities. \n\n 2) Chanting the holy name, dancing in ecstasy, singing, and playing musical instruments, the spiritual master is always gladdened by the sankirtana movement of Lord Caitanya Mahaprabhu. Because he is relishing the mellows of pure devotion within his mind, sometimes his hair stands on end, he feels quivering in his body, and tears flow from his eyes like waves. I offer my respectful obeisances unto the lotus feet of such a spiritual master. \n\n 3) The spiritual master is always engaged in the temple worship of Sri Sri Radha and Krsna. He also engages his disciples in such worship. They dress the Deities in beautiful clothes and ornaments, clean Their temple, and perform other similar worship of the Lord. I offer my respectful obeisances unto the lotus feet of such a spiritual master. \n\n 4) The spiritual master is always offering Krsna four kinds of delicious food [analyzed as that which is licked, chewed, drunk, and sucked]. When the spiritual master sees that the devotees are satisfied by eating bhagavat-prasada, he is satisfied. I offer my respectful obeisances unto the lotus feet of such a spiritual master. \n\n 5) The spiritual master is always eager to hear and chant about the unlimited conjugal pastimes of Radhika and Madhava, and Their qualities, names, and forms. The spiritual master aspires to relish these at every moment. I offer my respectful obeisances unto the lotus feet of such a spiritual master. \n\n 6) The spiritual master is very dear, because he is expert in assisting the gopis, who at different times make different tasteful arrangements for the perfection of Radha and Krsna\'s conjugal loving affairs within the groves of Vrndavana. I offer my most humble obeisances unto the lotus feet of such a spiritual master. \n\n 7) The spiritual master is to be honored as much as the Supreme Lord, because he is the most confidential servitor of the Lord. This is acknowledged in all revealed scriptures and followed by all authorities. Therefore I offer my respectful obeisances unto the lotus feet of such a spiritual master, who is a bona fide representative of Sri Hari [Krsna]. \n\n 8) By the mercy of the spiritual master one receives the benediction of Krsna. Without the grace of the spiritual master, one cannot make any advancement. Therefore, I should always remember and praise the spiritual master. At least three times a day I should offer my respectful obeisances unto the lotus feet of my spiritual master. \n\n</string>
    <string name="narsingh_aarti_text">(1)\n namas te narasiḿhāya\n prahlādāhlāda-dāyine\n hiraṇyakaśipor vakṣaḥ-\n śilā-ṭańka-nakhālaye\n \n\n (2)\n ito nṛsiḿhaḥ parato nṛsiḿho\n yato yato yāmi tato nṛsiḿhaḥ\n bahir nṛsiḿho hṛdaye nṛsiḿho\n nṛsiḿham ādiḿ śaraṇaḿ prapadye\n \n\n (3)\n tava kara-kamala-vare nakham adbhuta-śṛńgaḿ dalita-hiraṇyakaśipu-tanu-bhṛńgam \n keśava dhṛta-narahari-rūpa jaya jagadīśa hare\n \n \n</string>
    <string name="narsingh_aarti_translation">TRANSLATION\n 1) I offer my obeisances to Lord Narasimha, who gives joy to Prahlada Maharaja and whose nails are like chisels on the stone like chest of the demon Hiranyakasipu.\n\n 2) Lord Nrsimha is here and also there. Wherever I go Lord Nrsimha is there. He is in the heart and is outside as well. I surrender to Lord Nrsimha, the origin of all things and the supreme refuge. \n\n 3) O Kesava! O Lord of the universe! O Lord Hari, who have assumed the form of half-man, half-lionl All glories to You! Just as one can easily crush a wasp between one\'s fingernails, so in the same way the body of the wasp like demon Hiranyakasipu has been ripped apart by the wonderful pointed nails on Your beautiful lotus hands.</string>
    <string name="tulasi_aarti_text">Tulsi Pranam:\n vṛndāyai tulasī-devyai priyāyai keśavasya ca viṣṇu-bhakti-prade devī satya vatyai namo namaḥ \n\n (1)\n namo namaḥ tulasī kṛṣṇa-preyasi namo namaḥ rādhā-kṛṣṇa-sevā pābo ei abilāṣī\n\n (2)\n ye tomāra śaraṇa loy, tara vāñchā pūrṇa hoy kṛpā kori\' koro tāre vṛndāvana-vāsi\n\n (3)\n mora ei abhilāṣa, vilāsa kuñje dio vāsa nayana heribo sadā yugala-rūpa-rāśi\n\n (4)\n ei nivedana dhara, sakhīra anugata koro sevā-adhikāra diye koro nīja dāsī\n\n (5)\n dīna kṛṣṇa-dāse koy, ei yena mora hoy śrī-rādhā-govinda-preme sadā yena bhāsi\n\n Tulsi Pradkshina\n yāni kāni ca pāpāni brahma-hatyādikāni ca tāni tāni praṇaśyanti pradakṣiṇaḥ pade pade\n\n</string>
    <string name="srila_prabhupada_english_lectures">Srila Prabhupada English Lectures</string>
    <string name="srila_prabhupada_hindi_lectures">Srila Prabhupada Hindi Lectures</string>
    <string name="kirtans">Kirtans</string>
    <string name="special_lectures">Special Lectures</string>
    <string name="sri_guru_pranam">Sri Guru Pranam</string>
    <string name="sri_rupa_pranam">Sri Rupa Pranam</string>
    <string name="srila_prabhupada_pranati">Srila Prabhupada Pranati</string>
    <string name="srila_bhaktisiddhanta_sarasvati_pranati">Srila Bhaktisiddhanta Sarasvati Pranati</string>
    <string name="srila_gaurakisora_pranati">Srila Gaurakisora Pranati</string>
    <string name="srila_bhaktivinoda_pranati">Srila Bhaktivinoda Pranati</string>
    <string name="sri_vaisnava_pranam">Sri Vaisnava Pranam</string>
    <string name="caitanya_mahaprabhu_pranam">Caitanya Mahaprabhu Pranam</string>
    <string name="sri_panca_tattva_pranam">Sri Panca-tattva Pranam</string>
    <string name="sri_krishna_pranam">Sri Krishna Pranam</string>
    <string name="srimati_radhamati_pranam">Srimati Radhamati Pranam</string>
    <string name="sambandhadhideva_pranam">Sambandhadhideva Pranam</string>
    <string name="abhidheydhideva_pranam">Abhidheydhideva Pranam</string>
    <string name="prayojanadhideva_pranam">Prayojanadhideva Pranam</string>
    <string name="panca_tattva_mantra">Panca-tattva mantra</string>
    <string name="hare_k_a_mahamantra">Hare Kṛṣṇa Mahamantra</string>
    <string name="nityananda_prabhu_pranam">Nityananda Prabhu Pranam</string>
    <string name="sri_krishna_pranama">Sri Krishna Pranama</string>
    <string name="balarama_pranama">Balarama Pranama</string>
    <string name="lord_jagannatha_pranam">Lord Jagannatha Pranam</string>
    <string name="bhoga_offering">Bhoga offering</string>
    <string name="manglacaran">Manglacaran</string>
    <string name="prasad_prayer">Prasad Prayer</string>
    <string name="pushpanjali">Pushpanjali</string>
</resources>