<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/baseline_notifications_black_24dp"
        android:title="@string/notification" />
    <item
        android:id="@+id/nav_books"
        android:icon="@drawable/ic_baseline_pdf_24"
        android:title="@string/books" />
    <item
        android:id="@+id/nav_audio"
        android:icon="@drawable/ic_audio"
        android:title="@string/audios" />

    <item
        android:id="@+id/nav_video"
        android:icon="@drawable/ic_baseline_video_library_24"
        android:title="@string/videos"/>

</menu>