<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/yellow_gradient_background"
    tools:context=".fragments.home.aartis.AartiActivity">

    <Button
        android:id="@+id/btn_mangla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mangla_aarti"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textColor="@color/black"
        android:background="@drawable/rounded_corners"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"/>

    <Button
        android:id="@+id/btn_narsingh"
        android:textColor="@color/black"
        android:background="@drawable/rounded_corners"        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/narsingh_aarti"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"/>

    <Button
        android:id="@+id/btn_tulasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tulasi_aarti"
        android:textColor="@color/black"
        android:background="@drawable/rounded_corners"        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"/>

    <Button
        android:id="@+id/btn_shishastaskam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shikshastamkam"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/rounded_corners"
        android:typeface="monospace"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"/>

    <Button
        android:id="@+id/btn_tenoffences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ten_offences_to_the_holy_name"
        android:textColor="@color/black"
        android:background="@drawable/rounded_corners"        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"/>

    <Button
        android:id="@+id/btn_gaura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/gaura_aarti"
        android:textColor="@color/black"
        android:background="@drawable/rounded_corners"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"/>

</LinearLayout>