<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/yellow_gradient_background"
    tools:context=".fragments.audio.AudioFragment">

    <Button
        android:id="@+id/english_lectures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/srila_prabhupada_english_lectures"
        android:background="@drawable/rounded_corners"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:textStyle="bold"

        android:typeface="monospace"/>

    <Button
        android:id="@+id/hindiLectures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/srila_prabhupada_hindi_lectures"
        android:background="@drawable/rounded_corners"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:textStyle="bold"
        android:typeface="monospace"/>
    <Button
        android:id="@+id/kirtans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kirtans"
        android:background="@drawable/rounded_corners"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:textStyle="bold"
        android:typeface="monospace"/>
    <Button
        android:id="@+id/special_lectures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/special_lectures"
        android:background="@drawable/rounded_corners"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:textStyle="bold"
        android:typeface="monospace" />

</LinearLayout>

