<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/yellow_gradient_background"
    tools:context=".fragments.home.prayers.PrayersMain">

    <Button
        android:id="@+id/bhogoffering"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bhoga_offering"
        android:background="@drawable/rounded_corners"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:textStyle="bold"
        android:typeface="monospace"/>

    <Button
        android:id="@+id/mangalkarna"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manglacaran"
        android:background="@drawable/rounded_corners"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:textStyle="bold"
        android:typeface="monospace"/>

    <Button
        android:id="@+id/prasadprayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prasad_prayer"
        android:background="@drawable/rounded_corners"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <Button
        android:id="@+id/pushpanjali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pushpanjali"
        android:background="@drawable/rounded_corners"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:textStyle="bold"
        android:typeface="monospace" />



</LinearLayout>